# LLMVerse

./: README.md
task-14-finagent-mistral/: main.ipynb
task-20-AutoScrapeRAG/backend/: main.py  pyproject.toml
task-30-rag-app/: crud.py  database.py  llm_agents_poc.db  main.py  models.py  pyproject.toml  schemas.py  services.py  vector_store.py
task01-voice-cloning-ai-research/: README.md
task02-rag-pipeline-agent/: README.md
task03-gpt4o-financial-analysis/: Fundamental_multi_agent_llamaIndex_framework.ipynb  README.md
task04-mcp-workflows-anthropic/: README.md
task05-multi-agent-langgraph/: README.md
task06-olympic-coder-setup/: README.md
task07-internet-ai-setup/: README.md
task08-dabstep-benchmark-tests/: README.md
task09-multimodal-video-analysis/: README copy.md  README.md  get_started.py  requirements.txt  screen_share.py  test.ipynb  v1.py
task10-financial-agent-llama-index/: README.md  main.ipynb
task13-browser-use/: main.py  pyproject.toml  streamlit_demo.py
task29-realtime-conversation-voice-AI-agent/backend/: function_calling_utils.py  main.py  pyproject.toml  reservations.csv  system.md  test_client.py  tools.json  utils.py
task29-realtime-conversation-voice-AI-agent/backend/app/: core.py  main.py
task29-realtime-conversation-voice-AI-agent/backend/app/data/indices/: 5340e4f0-d5a8-4802-b7ae-84b30f977675.faiss  5340e4f0-d5a8-4802-b7ae-84b30f977675_chunks.json
task29-realtime-conversation-voice-AI-agent/backend/app/data/kbs/: 5340e4f0-d5a8-4802-b7ae-84b30f977675.txt
task29-realtime-conversation-voice-AI-agent/backend/tool_functions/: book_restaurant_reservation.py  check_order_status.py  getMenu.py  getWeather.py  place_order.py
task29-realtime-conversation-voice-AI-agent/backend/utils/: tool_executor.py  tools_router.py
(+32 files in other folders)
