[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "browser-use>=0.1.40",
    "crawl4ai>=0.6.2",
    "fastapi>=0.115.12",
    "google-genai>=1.13.0",
    "langchain-google-genai>=2.1.4",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
]
