[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.12",
    "google-genai>=1.12.1",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.24",
    "langchain-text-splitters>=0.3.8",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "twilio>=9.5.2",
    "uuid>=1.30",
]
